--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
 
     <header>
         <h1>Jasmine Daniel</h1>
-        <p>AltSchool ID: ALT/SOE/025/3633</p>
+        <ul>
+            <li>Full Name: Jasmine Daniel</li>
+            <li>Nationality: Nigerian</li>
+            <li>Location: Based in Nigeria</li>
+            <li>Field of Interest: Front-End Development, Web Design, UI/UX</li>
+            <li>Skills: HTML, CSS, JavaScript, Basic Graphic Design</li>
+            <li>Current Focus: Building projects, improving coding skills, and growing in tech</li>
+            <li>Hobbies: Coding, swimming, dancing, and engaging in creative activities</li>
+            <li>Values: Creativity, growth, community, and consistency</li>
+          </ul>
+        <h3>ALTSchool ID:</h3>
+           <p>ALT/SOE/025/3633</p>
       </header>
     
       <section>
         <h2>Biography</h2>
         <p>
-            I am a Front-End Developer and tech enthusiast passionate about creativity and continuous learning. I enjoy using design and code to bring ideas to life in simple, impactful ways. I share my journey online to stay accountable and encourage others in tech. 
+            I am a Front End Developer and tech enthusiast passionate about creativity and continuous learning. I enjoy using design and code to bring ideas to life in simple, impactful ways. I share my journey online to stay accountable and encourage others in tech. 
             My goal is to show that with consistency and courage, growth is always possible.
         </p>
       </section>
@@ -25,8 +36,8 @@
       <section>
         <h2>Why I Joined the AltSchool Program</h2>
         <p>
-            I joined AltSchool because I didn’t want to follow the traditional university path, I knew it wasn’t for me. I was searching for a space that understood my decision, 
-            where I wouldn’t be judged for choosing a different route into tech. Just when I got tired of looking and felt like giving up, I found AltSchool.
+            I joined ALTSchool because I didn’t want to follow the traditional university path, I knew it wasn’t for me. I was searching for a space that understood my decision, 
+            where I would not be judged for choosing a different route into tech. Just when I got tired of looking and felt like giving up, I found AltSchool.
              It felt like the place I had been hoping for one that saw my potential and gave me room to grow on my own terms.
         </p>
       </section>
